--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ main {
 /* Hero Section */
 .hero-banner {
   position: relative;
-  background-image: url('https://raw.githubusercontent.com/kylolandon/Venyou/refs/heads/main/B91E9601-11C0-4D2A-AE8B-1DAB0FFA6F45.png'); /* Replace with your image */
+  background-image: url('https://raw.githubusercontent.com/kylolandon/Venyou/refs/heads/main/F8890285-72E7-4A0C-9C2D-4A309AB59237.png'); /* Replace with your image */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -79,6 +79,7 @@ main {
   justify-content: center;
   text-align: center;
   color: white;
+  filter: blur(6px)
 }
 
 .hero-banner::before {
@@ -98,6 +99,7 @@ main {
 .hero-overlay h2 {
   font-size: 3rem;
   margin-bottom: 15px;
+  color: white;
 }
 
 .hero-overlay p {
