--- a/styles.css
+++ b/styles.css
@@ -34,13 +34,12 @@ header {
 
 header .logo {
   font-size: 1.4rem;
-  font-weight: 600;
   letter-spacing: 0.5px;
   line-height: 1;
 }
 
 header .logo .highlight {
-  color: #56BCF9;
+  color: white;
 }
 
 /* Navigation */
